infra/configs/cilium/network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l7-visibility"
  namespace: homepage
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homepage
  egress:
    - toCIDR:
      - 192.168.1.0/24
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
          rules:
            http: [{}]
